# raspi3_baremetal

./: .gitignore  README.md
cmake-toolchain/: aarch64-elf-gcc.cmake
docker/: Dockerfile  build.sh
enter_el1/: arm_pl011.c  arm_pl011.h  main.c  start.S
mpcore_test/: CMakeLists.txt  build.sh  config.txt  ldscript.ld  main.c  start.S
